NUTCH-1807 Avoid methods relying on system-specific default locale / charset
Fix forbidden calls in Nutch core classes, unit tests and plugins.

Code cleanup in updated classes:
- remove trailing whitespace
- sort and group imports
- remove unnecessary casts
- add missing override annotations